improving fragments and bottom navigation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,65 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <!--<color name="surface_transparent">#AA000000</color>
-    <color name="seed">#885200</color>-->
-    <color name="md_theme_light_primary">#885200</color>
+    <color name="seed">#963e32</color>
+    <color name="md_theme_light_primary">#9C4236</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#FFDDBB</color>
-    <color name="md_theme_light_onPrimaryContainer">#2B1700</color>
-    <color name="md_theme_light_secondary">#725A41</color>
+    <color name="md_theme_light_primaryContainer">#FFDAD4</color>
+    <color name="md_theme_light_onPrimaryContainer">#410000</color>
+    <color name="md_theme_light_secondary">#775651</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#FDDDBD</color>
-    <color name="md_theme_light_onSecondaryContainer">#281805</color>
-    <color name="md_theme_light_tertiary">#56633B</color>
+    <color name="md_theme_light_secondaryContainer">#FFDAD4</color>
+    <color name="md_theme_light_onSecondaryContainer">#2C1512</color>
+    <color name="md_theme_light_tertiary">#705C2E</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#D9E9B6</color>
-    <color name="md_theme_light_onTertiaryContainer">#141F01</color>
+    <color name="md_theme_light_tertiaryContainer">#FBDFA6</color>
+    <color name="md_theme_light_onTertiaryContainer">#251A00</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
     <color name="md_theme_light_background">#FFFBFF</color>
-    <color name="md_theme_light_onBackground">#1F1B16</color>
+    <color name="md_theme_light_onBackground">#201A19</color>
     <color name="md_theme_light_surface">#FFFBFF</color>
-    <color name="md_theme_light_onSurface">#1F1B16</color>
-    <color name="md_theme_light_surfaceVariant">#F1DFD0</color>
-    <color name="md_theme_light_onSurfaceVariant">#50453A</color>
-    <color name="md_theme_light_outline">#827568</color>
-    <color name="md_theme_light_inverseOnSurface">#FAEFE7</color>
-    <color name="md_theme_light_inverseSurface">#352F2A</color>
-    <color name="md_theme_light_inversePrimary">#FFB868</color>
+    <color name="md_theme_light_onSurface">#201A19</color>
+    <color name="md_theme_light_surfaceVariant">#F5DDDA</color>
+    <color name="md_theme_light_onSurfaceVariant">#534341</color>
+    <color name="md_theme_light_outline">#857370</color>
+    <color name="md_theme_light_inverseOnSurface">#FBEEEC</color>
+    <color name="md_theme_light_inverseSurface">#362F2E</color>
+    <color name="md_theme_light_inversePrimary">#FFB4A8</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#885200</color>
-    <color name="md_theme_light_outlineVariant">#D4C4B5</color>
+    <color name="md_theme_light_surfaceTint">#9C4236</color>
+    <color name="md_theme_light_outlineVariant">#D8C2BE</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#FFB868</color>
-    <color name="md_theme_dark_onPrimary">#482900</color>
-    <color name="md_theme_dark_primaryContainer">#673D00</color>
-    <color name="md_theme_dark_onPrimaryContainer">#FFDDBB</color>
-    <color name="md_theme_dark_secondary">#E0C1A3</color>
-    <color name="md_theme_dark_onSecondary">#402D17</color>
-    <color name="md_theme_dark_secondaryContainer">#58432C</color>
-    <color name="md_theme_dark_onSecondaryContainer">#FDDDBD</color>
-    <color name="md_theme_dark_tertiary">#BDCC9C</color>
-    <color name="md_theme_dark_onTertiary">#293411</color>
-    <color name="md_theme_dark_tertiaryContainer">#3F4B26</color>
-    <color name="md_theme_dark_onTertiaryContainer">#D9E9B6</color>
+    <color name="md_theme_dark_primary">#FFB4A8</color>
+    <color name="md_theme_dark_onPrimary">#5F150D</color>
+    <color name="md_theme_dark_primaryContainer">#7D2B21</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDAD4</color>
+    <color name="md_theme_dark_secondary">#E7BDB6</color>
+    <color name="md_theme_dark_onSecondary">#442925</color>
+    <color name="md_theme_dark_secondaryContainer">#5D3F3B</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDAD4</color>
+    <color name="md_theme_dark_tertiary">#DEC48C</color>
+    <color name="md_theme_dark_onTertiary">#3E2E04</color>
+    <color name="md_theme_dark_tertiaryContainer">#564419</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FBDFA6</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1F1B16</color>
-    <color name="md_theme_dark_onBackground">#EBE1D9</color>
-    <color name="md_theme_dark_surface">#1F1B16</color>
-    <color name="md_theme_dark_onSurface">#EBE1D9</color>
-    <color name="md_theme_dark_surfaceVariant">#50453A</color>
-    <color name="md_theme_dark_onSurfaceVariant">#D4C4B5</color>
-    <color name="md_theme_dark_outline">#9D8E81</color>
-    <color name="md_theme_dark_inverseOnSurface">#1F1B16</color>
-    <color name="md_theme_dark_inverseSurface">#EBE1D9</color>
-    <color name="md_theme_dark_inversePrimary">#885200</color>
+    <color name="md_theme_dark_background">#201A19</color>
+    <color name="md_theme_dark_onBackground">#EDE0DD</color>
+    <color name="md_theme_dark_surface">#201A19</color>
+    <color name="md_theme_dark_onSurface">#EDE0DD</color>
+    <color name="md_theme_dark_surfaceVariant">#534341</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D8C2BE</color>
+    <color name="md_theme_dark_outline">#A08C89</color>
+    <color name="md_theme_dark_inverseOnSurface">#201A19</color>
+    <color name="md_theme_dark_inverseSurface">#EDE0DD</color>
+    <color name="md_theme_dark_inversePrimary">#9C4236</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#FFB868</color>
-    <color name="md_theme_dark_outlineVariant">#50453A</color>
+    <color name="md_theme_dark_surfaceTint">#FFB4A8</color>
+    <color name="md_theme_dark_outlineVariant">#534341</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
+
