--- a/app/src/main/res/layout/adapter_event.xml
+++ b/app/src/main/res/layout/adapter_event.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="?attr/colorSecondary" >
+        app:cardBackgroundColor="?attr/colorSurfaceVariant" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="8dp"
-                android:textColor="?attr/colorOnPrimary"/>
+                android:textColor="?attr/colorOnSurface"/>
 
             <ImageButton
                 android:id="@+id/button_event_options"
@@ -36,7 +36,7 @@
                 android:layout_margin="4dp"
                 android:background="?selectableItemBackgroundBorderless"
                 android:src="@drawable/ic_more"
-                app:tint="?attr/colorOnPrimary" />
+                app:tint="?attr/colorOnSurface" />
 
         </LinearLayout>
 
