--- a/app/src/main/res/layout/fragment_edit_grocerie.xml
+++ b/app/src/main/res/layout/fragment_edit_grocerie.xml
@@ -13,21 +13,38 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <com.google.android.material.button.MaterialButton
-            style="@style/Widget.Material3.Button.TextButton"
-            android:id="@+id/button_submit"
-            android:layout_gravity="end"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/label_submit"
-            android:layout_margin="8dp"
-            android:padding="0dp"/>
+            android:gravity="center_vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
+            <TextView
+                style="@style/TextAppearance.Material3.TitleLarge"
+                android:id="@+id/edit_label"
+                android:layout_width="0dp"
+
+                android:layout_margin="8dp"
+
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.Material3.Button.TextButton"
+                android:id="@+id/button_submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_submit"
+
+                android:layout_margin="8dp"
+
+                android:padding="0dp"/>
+        </LinearLayout>
+
+        <!--<com.google.android.material.textfield.TextInputLayout
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/product_singular"
+            android:hint="@string/dialog_product"
             android:layout_margin="8dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -38,13 +55,30 @@
                 android:inputType="textMultiLine"
                 />
 
+        </com.google.android.material.textfield.TextInputLayout>-->
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:hint="@string/dialog_unit">
+
+            <AutoCompleteTextView
+                android:id="@+id/edit_unit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:maxLines="1"
+                app:simpleItems="@array/units" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/label_ingredient_value"
+            android:hint="@string/dialog_value"
             android:layout_margin="8dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -56,22 +90,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:hint="@string/product_unit">
-
-            <AutoCompleteTextView
-                android:id="@+id/edit_unit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:maxLines="1"
-                app:simpleItems="@array/units" />
-
-        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
 
