--- a/app/src/main/res/layout/layout_picker.xml
+++ b/app/src/main/res/layout/layout_picker.xml
@@ -39,7 +39,7 @@
             android:scrollbars="none" >
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp">
