--- a/app/src/main/res/menu/recipe_item_menu.xml
+++ b/app/src/main/res/menu/recipe_item_menu.xml
@@ -9,6 +9,10 @@
         android:title="@string/label_delete"
         android:icon="@drawable/ic_delete" />
     <item
+        android:id="@+id/item_share"
+        android:title="@string/label_share" />
+    <item
         android:id="@+id/item_export"
         android:title="@string/label_export" />
+
 </menu>
