--- a/app/src/main/res/layout/fragment_edit_grocerie.xml
+++ b/app/src/main/res/layout/fragment_edit_grocerie.xml
@@ -7,11 +7,14 @@
     >
 
     <LinearLayout
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp">
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="8dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -122,7 +125,7 @@
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <com.google.android.material.chip.ChipGroup
+            <com.pigeoff.menu.views.ChipCategories
                 android:id="@+id/chip_group_filter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -176,7 +179,9 @@
                     android:layout_height="wrap_content" />
 
 
-            </com.google.android.material.chip.ChipGroup>
+            </com.pigeoff.menu.views.ChipCategories>
+
+
         </HorizontalScrollView>
 
     </LinearLayout>
