--- a/app/src/main/res/layout/adapter_check.xml
+++ b/app/src/main/res/layout/adapter_check.xml
@@ -1,69 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp">
-
-    <ImageButton
-        android:id="@+id/checkbox"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="8dp"
-        android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_check"
-        app:tint="?colorPrimary" />
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:animateLayoutChanges="true">
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp">
 
             <TextView
-                style="@style/TextAppearance.Material3.TitleMedium"
                 android:id="@+id/text_label"
-                android:layout_width="0dp"
+                style="@style/TextAppearance.Material3.BodyLarge"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:gravity="start|top"
-                android:text="Ingrédient" />
+                />
 
             <TextView
-                style="@style/TextAppearance.Material3.BodyLarge"
-                android:id="@+id/text_label_value_unit"
-                android:layout_width="wrap_content"
+                android:id="@+id/text_sub"
+                style="@style/TextAppearance.Material3.BodySmall"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:background="@android:color/transparent"
-                android:gravity="end|top"
                 />
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="true"/>
-
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/button_action"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="8dp"
-        android:background="?android:selectableItemBackgroundBorderless"
-        app:srcCompat="@drawable/ic_expand" />
 </LinearLayout>
