--- a/app/src/main/res/layout/adapter_ingredient.xml
+++ b/app/src/main/res/layout/adapter_ingredient.xml
@@ -17,17 +17,6 @@
             android:layout_height="wrap_content"
             android:padding="8dp" >
 
-
-            <TextView
-                style="@style/TextAppearance.Material3.TitleMedium"
-                android:lines="1"
-                android:layout_margin="16dp"
-                android:id="@+id/edit_ingredient_label"
-                android:text="@string/label_ingredient_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
@@ -35,36 +24,37 @@
                 <com.google.android.material.textfield.TextInputLayout
                     style="?attr/textInputFilledStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="7"
                     android:layout_height="wrap_content"
-                    android:hint="@string/label_ingredient_value"
+                    android:hint="@string/label_ingredient_label"
                     android:layout_margin="8dp">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_ingredient_value"
+                        android:id="@+id/edit_ingredient_label"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
-                        android:inputType="numberDecimal"
+                        android:clickable="false"
+                        android:enabled="false"
+                        android:inputType="text"
                         />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                    style="?attr/textInputFilledStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:layout_height="wrap_content"
-                    android:hint="@string/label_ingredient_unit"
+                    android:hint="@string/label_ingredient_quantity"
                     android:layout_margin="8dp">
 
-                    <AutoCompleteTextView
-                        android:focusable="false"
-                        android:id="@+id/edit_ingredient_unit"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edit_ingredient_quantity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:simpleItems="@array/units"
                         android:maxLines="1"
+                        android:inputType="text"
                         />
 
                 </com.google.android.material.textfield.TextInputLayout>
