--- a/app/src/main/res/layout/fragment_edit_grocerie.xml
+++ b/app/src/main/res/layout/fragment_edit_grocerie.xml
@@ -12,30 +12,29 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="8dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:gravity="end">
 
-            <!--<TextView
-                style="@style/TextAppearance.Material3.TitleLarge"
-                android:id="@+id/edit_label"
-                android:layout_width="0dp"
-
-                android:layout_margin="8dp"
-
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.Material3.Button.TextButton"
+                android:id="@+id/button_submit"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />-->
+                android:text="@string/label_submit"
+                android:layout_marginTop="8dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <com.google.android.material.textfield.TextInputLayout
                 style="?attr/textInputFilledStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="7"
                 android:hint="@string/dialog_product"
                 android:layout_margin="8dp">
 
@@ -50,72 +49,21 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.button.MaterialButton
-                style="@style/Widget.Material3.Button.TextButton"
-                android:id="@+id/button_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_submit"
-
-                android:layout_margin="8dp"
-
-                android:padding="0dp"/>
-        </LinearLayout>
-
-
-        <!--<com.google.android.material.textfield.TextInputLayout
-            style="?attr/textInputFilledStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/dialog_product"
-            android:layout_margin="8dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_label"
-                android:enabled="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
             <com.google.android.material.textfield.TextInputLayout
                 style="?attr/textInputFilledStyle"
                 android:layout_width="0dp"
+                android:layout_weight="5"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="@string/dialog_value"
+                android:hint="@string/dialog_quantity"
                 android:layout_margin="8dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_value"
+                    android:id="@+id/edit_quantity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="8dp"
-                android:hint="@string/dialog_unit">
-
-                <AutoCompleteTextView
-                    android:id="@+id/edit_unit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
                     android:maxLines="1"
-                    app:simpleItems="@array/units" />
+                    android:inputType="text"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
